--- a/css/main.css
+++ b/css/main.css
@@ -17,9 +17,8 @@ body {
   margin-right: auto;
 }
 .swiper-slide {
+  background: none;
   text-align: center;
-  font-size: 18px;
-  background: #fff;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -33,4 +32,26 @@ body {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+}
+.modal-dialog {
+  position: relative;
+  display: table;
+  overflow-y: auto;
+  overflow-x: auto;
+  width: auto;
+  min-width: 300px;
+}
+.modal-body {
+  background-color: black;
+}
+.swiper-slide {
+    width: 20%;
+}
+@media (max-width:1199px) {
+.swiper-slide {
+    width: 50%;
+}
+@media (max-width:320px) {
+.swiper-slide {
+    width: 100%;
 }
